# ukr_mnist

./: .gitignore  README.md  load_kura.py  pyproject.toml  ukr.py  ukr_main.py
